MOSIP-43652 - Prefixed the run context for running the testrig at same time in multiple instances
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

--- a/api-test/src/main/resources/masterdata/BiometricAttributes/BiometricAttributes.yml
+++ b/api-test/src/main/resources/masterdata/BiometricAttributes/BiometricAttributes.yml
@@ -10,7 +10,7 @@ BiometricAttributes:
       inputTemplate: masterdata/BiometricAttributes/biometricAttributes
       outputTemplate: masterdata/BiometricAttributes/biometricAttributesResult
       input: '{
-     "code": "TST",
+     "code": "TST-$TESTDATACONTEXT$",
     "name": "Test",
     "description": "Auto Test",
     "biometricTypeCode": "PHT",
@@ -19,7 +19,7 @@ BiometricAttributes:
 	"requesttime": "$TIMESTAMP$"
 	}'
       output: '{
-      "code": "TST"
+      "code": "TST-$TESTDATACONTEXT$"
 }'
 
    MasterData_BiometricAttributes_Invalid_empty_biometricTypeCode:
