--- a/api-test/src/main/resources/masterdata/FetchRegCent/FetchRegCent.yml
+++ b/api-test/src/main/resources/masterdata/FetchRegCent/FetchRegCent.yml
@@ -12,7 +12,7 @@ FetchRegCent:
       input: '{
   "longitude": "$REMOVE$",
   "latitude": "$REMOVE$",
-  "langcode": "$REMOVE$",
+  "langcode": "eng",
   "proximitydistance": "$REMOVE$",
   "locationcode": "$REMOVE$",
   "registrationcenterid": "$REMOVE$",
