--- a/api-test/src/main/resources/masterdata/SearchBlockListedWords/SearchBlockListedWords.yml
+++ b/api-test/src/main/resources/masterdata/SearchBlockListedWords/SearchBlockListedWords.yml
@@ -14,7 +14,7 @@ SearchBlockListedWords:
       {
         "columnName": "word",
         "type": "equals",
-        "value": "dumbooo",
+        "value": "$ID:UpdateBlockListedWords_All_Valid_Smoked_Sid_word$",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
@@ -52,7 +52,7 @@ SearchBlockListedWords:
       {
         "columnName": "word",
         "type": "contains",
-        "value": "dumbooo",
+        "value": "$ID:UpdateBlockListedWords_All_Valid_Smoked_Sid_word$",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
@@ -90,7 +90,7 @@ SearchBlockListedWords:
       {
         "columnName": "word",
         "type": "startsWith",
-        "value": "dumbooo",
+        "value": "$ID:UpdateBlockListedWords_All_Valid_Smoked_Sid_word$",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
@@ -165,7 +165,7 @@ SearchBlockListedWords:
       {
         "columnName": "word",
         "type": "equals",
-        "value": "dumbooo",
+        "value": "$ID:UpdateBlockListedWords_All_Valid_Smoked_Sid_word$",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
