--- a/api-test/src/main/resources/masterdata/SearchMachineSpec/SearchMachineSpec.yml
+++ b/api-test/src/main/resources/masterdata/SearchMachineSpec/SearchMachineSpec.yml
@@ -13,7 +13,7 @@ SearchMachineSpec:
       {
         "columnName": "name",
         "type": "equals",
-        "value": "HP",
+        "value": "HP-$TESTDATACONTEXT$",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
@@ -32,12 +32,12 @@ SearchMachineSpec:
       output: '{
 	"data": [{
 	"id": "$REMOVE$",
-	"name": "HP",
-	"brand": "HP",
-	"model": "1234",
+	"name": "HP-$TESTDATACONTEXT$",
+	"brand": "HP-$TESTDATACONTEXT$",
+	"model": "1234-$TESTDATACONTEXT$",
 	"machineTypeCode": "$REMOVE$",
 	"minDriverversion": "3.2",
-	"description": "HP brand",
+	"description": "HP brand-$TESTDATACONTEXT$",
 	"isActive": "$REMOVE$"
 	}]
 }'
@@ -55,7 +55,7 @@ SearchMachineSpec:
       {
         "columnName": "name",
         "type": "equals",
-        "value": "HP",
+        "value": "HP-$TESTDATACONTEXT$",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
@@ -72,12 +72,12 @@ SearchMachineSpec:
       output: '{
 	"data": [{
 	"id": "$REMOVE$",
-	"name": "HP",
-	"brand": "HP",
-	"model": "1234",
+	"name": "HP-$TESTDATACONTEXT$",
+	"brand": "HP-$TESTDATACONTEXT$",
+	"model": "1234-$TESTDATACONTEXT$",
 	"machineTypeCode": "$REMOVE$",
 	"minDriverversion": "3.2",
-	"description": "HP brand",
+	"description": "HP brand-$TESTDATACONTEXT$",
 	"isActive": "$REMOVE$"
 	}]
 }'
@@ -95,7 +95,7 @@ SearchMachineSpec:
       {
         "columnName": "model",
         "type": "equals",
-        "value": "1234",
+        "value": "1234-$TESTDATACONTEXT$",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
@@ -113,8 +113,8 @@ SearchMachineSpec:
 	"data": [{
 	"id": "$REMOVE$",
 	"name": "$REMOVE$",
-	"brand": "HP",
-	"model": "1234",
+	"brand": "HP-$TESTDATACONTEXT$",
+	"model": "1234-$TESTDATACONTEXT$",
 	"machineTypeCode": "$REMOVE$",
 	"minDriverversion": "3.2",
 	"description": "$REMOVE$",
@@ -135,7 +135,7 @@ SearchMachineSpec:
       {
         "columnName": "brand",
         "type": "equals",
-        "value": "HP",
+        "value": "HP-$TESTDATACONTEXT$",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
@@ -153,7 +153,7 @@ SearchMachineSpec:
 	"data": [{
 	"id": "$REMOVE$",
 	"name": "$REMOVE$",
-	"brand": "HP",
+	"brand": "HP-$TESTDATACONTEXT$",
 	"model": "$REMOVE$",
 	"machineTypeCode": "$REMOVE$",
 	"minDriverversion": "$REMOVE$",
@@ -197,7 +197,7 @@ SearchMachineSpec:
       uniqueIdentifier: TC_Masterdata_SearchMachineSpec_06
       description: Search for machine spec details where the condition column name is name and the filter type is starts with
       role: admin
-      templateFields: ["description"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/SearchMachineSpec/searchMachineSpec
       outputTemplate: masterdata/SearchMachineSpec/searchMachineSpecResult
@@ -223,12 +223,12 @@ SearchMachineSpec:
       output: '{
 	"data": [{
 	"id": "$REMOVE$",
-	"name": "HP",
-	"brand": "HP",
-	"model": "1234",
+	"name": "$REMOVE$",
+	"brand": "$REMOVE$",
+	"model": "$REMOVE$",
 	"machineTypeCode": "$REMOVE$",
 	"minDriverversion": "3.2",
-	"description": "HP brand",
+	"description": "$REMOVE$",
 	"isActive": "$REMOVE$"
 	}]
 }'
@@ -246,7 +246,7 @@ SearchMachineSpec:
       {
         "columnName": "name",
         "type": "contains",
-        "value": "P",
+        "value": "$TESTDATACONTEXT$",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
@@ -263,12 +263,12 @@ SearchMachineSpec:
       output: '{
 	"data": [{
 	"id": "$REMOVE$",
-	"name": "HP",
-	"brand": "HP",
-	"model": "1234",
+	"name": "HP-$TESTDATACONTEXT$",
+	"brand": "HP-$TESTDATACONTEXT$",
+	"model": "1234-$TESTDATACONTEXT$",
 	"machineTypeCode": "$REMOVE$",
 	"minDriverversion": "3.2",
-	"description": "HP brand",
+	"description": "HP brand-$TESTDATACONTEXT$",
 	"isActive": "$REMOVE$"
 	}]
 }'
