--- a/api-test/src/main/resources/masterdata/DocumentType/CreateDocumentType.yml
+++ b/api-test/src/main/resources/masterdata/DocumentType/CreateDocumentType.yml
@@ -1,5 +1,5 @@
 CreateDocumentType:
-   MasterData_CreateDocumentType_Valid_Smoke:
+   MasterData_CreateDocumentType_Valid_Smoke_Sid:
       endPoint: /v1/masterdata/documenttypes
       uniqueIdentifier: TC_Masterdata_CreateDocumentType_01
       description: Create Document Type with valid data
@@ -9,20 +9,20 @@ CreateDocumentType:
       inputTemplate: masterdata/DocumentType/documentType
       outputTemplate: masterdata/DocumentType/documentTypeResult
       input: '{
-	"code": "TestDocType0010",
+	"code": "AutoDocType0010$TESTDATACONTEXT$",
 	"description": "TestDocType0010 Card Holder",
 	"isActive": true,
 	"langCode": "eng",
-	"name": "TestDocType0010 Card",
+	"name": "TestDocType0010 Card $TESTDATACONTEXT$",
 	"requesttime": "$TIMESTAMP$"
 }'
       output: '{
-	"code": "TestDocType0010",
+	"code": "AutoDocType0010$TESTDATACONTEXT$",
 	"description": "TestDocType0010 Card Holder",
 	"isActive": "$REMOVE$",
-	"name": "TestDocType0010 Card"
+	"name": "TestDocType0010 Card $TESTDATACONTEXT$"
 }'
-   MasterData_CreateDocumentType_All_Valid_Mandatory_Fields_Smoke_Eng:
+   MasterData_CreateDocumentType_All_Valid_Mandatory_Fields_Smoke_Eng_Sid:
       endPoint: /v1/masterdata/documenttypes
       uniqueIdentifier: TC_Masterdata_CreateDocumentType_02
       description: Create Document Type with all mandatory data
@@ -32,7 +32,7 @@ CreateDocumentType:
       inputTemplate: masterdata/DocumentType/documentType
       outputTemplate: masterdata/DocumentType/documentTypeResult
       input: '{
-	"code": "TestDocType0020",
+	"code": "AutoDocType0020$TESTDATACONTEXT$",
 	"description": "$REMOVE$",
 	"isActive": true,
 	"langCode": "eng",
@@ -40,7 +40,7 @@ CreateDocumentType:
 	"requesttime": "$TIMESTAMP$"
 }'
       output: '{
-	"code": "TestDocType0020",
+	"code": "AutoDocType0020$TESTDATACONTEXT$",
 	"description": "$REMOVE$",
 	"isActive": "$REMOVE$",
 	"name": "TestDocType0020 Card"
