--- a/api-test/src/main/resources/masterdata/FetchDeviceSpec/FetchDeviceSpec.yml
+++ b/api-test/src/main/resources/masterdata/FetchDeviceSpec/FetchDeviceSpec.yml
@@ -26,7 +26,7 @@ FetchDeviceSpec:
       inputTemplate: masterdata/FetchDeviceSpec/fetchDeviceSpec
       outputTemplate: masterdata/FetchDeviceSpec/fetchDeviceSpecResult
       input: '{
-  "devicetypecode": "FRS",
+  "devicetypecode": "AUTO4$TESTDATACONTEXT$",
   "langcode": "$REMOVE$"
 }'
       output: '{
@@ -42,7 +42,7 @@ FetchDeviceSpec:
       inputTemplate: masterdata/FetchDeviceSpec/fetchDeviceSpec
       outputTemplate: masterdata/FetchDeviceSpec/fetchDeviceSpecResult
       input: '{
-  "devicetypecode": "GST4",
+  "devicetypecode": "AUTO4$TESTDATACONTEXT$",
   "langcode": "eng"
 }'
       output: '{
