--- a/api-test/src/main/resources/masterdata/FilterBlockListedWords/FilterBlockListedWords.yml
+++ b/api-test/src/main/resources/masterdata/FilterBlockListedWords/FilterBlockListedWords.yml
@@ -12,7 +12,7 @@ FilterBlockListedWords:
 	"filters": [{
 		"columnName": "word",
 		"type": "unique",
-		"text": "dumbooo"
+		"text": "$ID:UpdateBlockListedWords_All_Valid_Smoked_Sid_word$"
 	}],
 	"languageCode": "eng",
 	"requesttime": "$TIMESTAMP$"
@@ -21,7 +21,7 @@ FilterBlockListedWords:
     "filters": [
       {
         "fieldID": "word",
-        "fieldValue": "dumbooo"
+        "fieldValue": "$ID:UpdateBlockListedWords_All_Valid_Smoked_Sid_word$"
       }
     ]
   }'
@@ -38,7 +38,7 @@ FilterBlockListedWords:
 	"filters": [{
 		"columnName": "word",
 		"type": "All",
-		"text": "dumbooo"
+		"text": "$ID:UpdateBlockListedWords_All_Valid_Smoked_Sid_word$"
 	}],
 	"languageCode": "eng",
 	"requesttime": "$TIMESTAMP$"
@@ -47,7 +47,7 @@ FilterBlockListedWords:
     "filters": [
       {
         "fieldID": "word",
-        "fieldValue": "dumbooo"
+        "fieldValue": "$ID:UpdateBlockListedWords_All_Valid_Smoked_Sid_word$"
       }
     ]
   }'
