--- a/api-test/src/main/resources/masterdata/LocationController/UpdateLocationData.yml
+++ b/api-test/src/main/resources/masterdata/LocationController/UpdateLocationData.yml
@@ -10,7 +10,7 @@ UpdateLocationData:
       outputTemplate: masterdata/LocationController/locationDataResult
       input: '{
     "code": "$ID:CreateLocationData_WithMandatoryLanguage_All_Valid_Smoke_Sid_code$",
-    "name": "Test_Loc_A_updated_",
+    "name": "Test_Loc_A_updated_$TESTDATACONTEXT$",
     "hierarchyLevel": "$HIERARCHYLEVEL$",
     "hierarchyName": "$HIERARCHYNAME$",
     "parentLocCode": "$PARENTLOCCODE$",
@@ -20,8 +20,8 @@ UpdateLocationData:
   }'
       output: '{
 "isActive": "$REMOVE$",
-"code": "TST12",
-"name": "Test_Loc_A_updated_",
+"code": "$ID:CreateLocationData_WithMandatoryLanguage_All_Valid_Smoke_Sid_code$",
+"name": "Test_Loc_A_updated_$TESTDATACONTEXT$",
 "hierarchyLevel": "$REMOVE$",
 "hierarchyName": "$REMOVE$",
 "parentLocCode": "$REMOVE$",
