--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -7,18 +7,18 @@
 	<parent>
 		<groupId>io.mosip.admin</groupId>
 		<artifactId>admin-parent</artifactId>
-		<version>1.3.0-SNAPSHOT</version>
+		<version>1.3.0</version>
 	</parent>
 	<artifactId>admin-service</artifactId>
 	<name>admin-service</name>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0</version>
 	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<springdoc.version>1.8.0</springdoc.version>
-		<mosip.commons.packetmanager.version>1.3.0-SNAPSHOT</mosip.commons.packetmanager.version>
-		<kernel.core.version>1.3.0-SNAPSHOT</kernel.core.version>
+		<mosip.commons.packetmanager.version>1.3.0</mosip.commons.packetmanager.version>
+		<kernel.core.version>1.3.0</kernel.core.version>
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
@@ -29,8 +29,8 @@
 		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
 		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
 		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
-		<mosip.biometric.util.version>1.3.0-SNAPSHOT</mosip.biometric.util.version>
-		<mosip.openid.bridge.version>1.3.0-SNAPSHOT</mosip.openid.bridge.version>
+		<mosip.biometric.util.version>1.3.0</mosip.biometric.util.version>
+		<mosip.openid.bridge.version>1.3.0</mosip.openid.bridge.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
 	</properties>
@@ -403,7 +403,7 @@
 			<artifactId>maven-deploy-plugin</artifactId>
 			<version>${maven.deploy.plugin.version}</version>
 			<configuration>
-				<skip>true</skip>
+				<skip>false</skip>
 			</configuration>
 			<executions>
 				<execution>
@@ -413,7 +413,7 @@
 						<goal>deploy</goal>
 					</goals>
 					<configuration>
-						<skip>true</skip>
+						<skip>false</skip>
 					</configuration>
 				</execution>
 			</executions>
