--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.mosip.hotlist</groupId>
 	<artifactId>hotlist-service</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0</version>
 	<name>Hotlist Service</name>
 	<description>Service to block/unblock ids in MOSIP</description>
      <url>https://github.com/mosip/admin-services</url>
@@ -28,11 +28,11 @@
 		<mockito.version>3.3.3</mockito.version>
 
 		<!-- kernel properties -->
-		<kernel-core.version>1.3.0-SNAPSHOT</kernel-core.version>
-		<kernel.bom.version>1.3.0-SNAPSHOT</kernel.bom.version>
-		<kernel-websubclient-api.version>1.3.0-SNAPSHOT</kernel-websubclient-api.version>
-		<kernel-logger-logback.version>1.3.0-SNAPSHOT</kernel-logger-logback.version>
-		<kernel.auth.adaptor.version>1.3.0-SNAPSHOT</kernel.auth.adaptor.version>
+		<kernel-core.version>1.3.0</kernel-core.version>
+		<kernel.bom.version>1.3.0</kernel.bom.version>
+		<kernel-websubclient-api.version>1.3.0</kernel-websubclient-api.version>
+		<kernel-logger-logback.version>1.3.0</kernel-logger-logback.version>
+		<kernel.auth.adaptor.version>1.3.0</kernel.auth.adaptor.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 	</properties>
 
@@ -496,7 +496,7 @@
 						<artifactId>maven-deploy-plugin</artifactId>
 						<version>${maven.deploy.plugin.version}</version>
 						<configuration>
-							<skip>true</skip>
+							<skip>false</skip>
 						</configuration>
 						<executions>
 							<execution>
@@ -506,7 +506,7 @@
 									<goal>deploy</goal>
 								</goals>
 								<configuration>
-									<skip>true</skip>
+									<skip>false</skip>
 								</configuration>
 							</execution>
 						</executions>
