--- a/admin/kernel-masterdata-service/pom.xml
+++ b/admin/kernel-masterdata-service/pom.xml
@@ -9,7 +9,7 @@
 	<name>kernel-masterdata-service</name>
 	<description>Mosip commons project </description>
 	<url>https://github.com/mosip/commons</url>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -108,12 +108,12 @@
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
-		<kernel.applicant-type.version>1.3.0-SNAPSHOT</kernel.applicant-type.version>
-		<kernel.logger.logback.version>1.3.0-SNAPSHOT</kernel.logger.logback.version>
+		<kernel.applicant-type.version>1.3.0</kernel.applicant-type.version>
+		<kernel.logger.logback.version>1.3.0</kernel.logger.logback.version>
 		<tss.version>0.3.0</tss.version>
-		<kernel.websubclient.api.version>1.3.0-SNAPSHOT</kernel.websubclient.api.version>
-		<kernel.core.version>1.3.0-SNAPSHOT</kernel.core.version>
-		<mosip.openid.bridge.version>1.3.0-SNAPSHOT</mosip.openid.bridge.version>
+		<kernel.websubclient.api.version>1.3.0</kernel.websubclient.api.version>
+		<kernel.core.version>1.3.0</kernel.core.version>
+		<mosip.openid.bridge.version>1.3.0</mosip.openid.bridge.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 	</properties>
 
@@ -435,7 +435,7 @@
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>${maven.deploy.plugin.version}</version>
 				<configuration>
-					<skip>true</skip>
+					<skip>false</skip>
 				</configuration>
 				<executions>
 					<execution>
@@ -445,7 +445,7 @@
 							<goal>deploy</goal>
 						</goals>
 						<configuration>
-							<skip>true</skip>
+							<skip>false</skip>
 						</configuration>
 					</execution>
 				</executions>
