--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -7,7 +7,7 @@
 	<name>kernel-syncdata-service</name>
 	<description>Mosip commons project </description>
         <url>https://github.com/mosip/commons</url>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -81,12 +81,12 @@
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
-		<kernel.core.version>1.3.0-SNAPSHOT</kernel.core.version>
-		<kernel.auth.adaptor.version>1.3.0-SNAPSHOT</kernel.auth.adaptor.version>
-		<kernel.logger.version>1.3.0-SNAPSHOT</kernel.logger.version>
-		<kernel.crypto.version>1.3.0-SNAPSHOT</kernel.crypto.version>
-		<kernel.keymanager.version>1.3.0-SNAPSHOT</kernel.keymanager.version>
-		<kernel-websubclient-api.version>1.3.0-SNAPSHOT</kernel-websubclient-api.version>
+		<kernel.core.version>1.3.0</kernel.core.version>
+		<kernel.auth.adaptor.version>1.3.0</kernel.auth.adaptor.version>
+		<kernel.logger.version>1.3.0</kernel.logger.version>
+		<kernel.crypto.version>1.3.0</kernel.crypto.version>
+		<kernel.keymanager.version>1.3.0</kernel.keymanager.version>
+		<kernel-websubclient-api.version>1.3.0</kernel-websubclient-api.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 	</properties>
 
@@ -446,7 +446,7 @@
 			<artifactId>maven-deploy-plugin</artifactId>
 			<version>${maven.deploy.plugin.version}</version>
 			<configuration>
-				<skip>true</skip>
+				<skip>false</skip>
 			</configuration>
 			<executions>
 				<execution>
@@ -456,7 +456,7 @@
 						<goal>deploy</goal>
 					</goals>
 					<configuration>
-						<skip>true</skip>
+						<skip>false</skip>
 					</configuration>
 				</execution>
 			</executions>
