--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -403,7 +403,7 @@
 			<artifactId>maven-deploy-plugin</artifactId>
 			<version>${maven.deploy.plugin.version}</version>
 			<configuration>
-				<skip>false</skip>
+				<skip>true</skip>
 			</configuration>
 			<executions>
 				<execution>
@@ -413,7 +413,7 @@
 						<goal>deploy</goal>
 					</goals>
 					<configuration>
-						<skip>false</skip>
+						<skip>true</skip>
 					</configuration>
 				</execution>
 			</executions>
