--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -496,7 +496,7 @@
 						<artifactId>maven-deploy-plugin</artifactId>
 						<version>${maven.deploy.plugin.version}</version>
 						<configuration>
-							<skip>false</skip>
+							<skip>true</skip>
 						</configuration>
 						<executions>
 							<execution>
@@ -506,7 +506,7 @@
 									<goal>deploy</goal>
 								</goals>
 								<configuration>
-									<skip>false</skip>
+									<skip>true</skip>
 								</configuration>
 							</execution>
 						</executions>
