--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -424,7 +424,7 @@
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>${maven.deploy.plugin.version}</version>
 				<configuration>
-					<skip>false</skip>
+					<skip>true</skip>
 				</configuration>
 				<executions>
 					<execution>
@@ -434,7 +434,7 @@
 							<goal>deploy</goal>
 						</goals>
 						<configuration>
-							<skip>false</skip>
+							<skip>true</skip>
 						</configuration>
 					</execution>
 				</executions>
