--- a/helm/admin-service/Chart.yaml
+++ b/helm/admin-service/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: admin-service
 description: A Helm chart for MOSIP Admin module
 type: application
-version: 1.3.0-develop
+version: 1.3.0
 appVersion: ""
 dependencies:
   - name: common
