--- a/helm/syncdata/Chart.yaml
+++ b/helm/syncdata/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: syncdata
 description: A Helm chart for MOSIP Syncdata module
 type: application
-version: 1.3.0-develop
+version: 1.3.0
 appVersion: ""
 dependencies:
   - name: common
