--- a/helm/syncdata/values.yaml
+++ b/helm/syncdata/values.yaml
@@ -46,8 +46,8 @@ service:
   externalTrafficPolicy: Cluster
 image:
   registry: docker.io
-  repository: mosipqa/kernel-syncdata-service
-  tag: 1.3.x
+  repository: mosipid/kernel-syncdata-service
+  tag: 1.3.0
   ## Specify a imagePllPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
